--- a/Educonecta/public/assets/css/soft-design-system.css
+++ b/Educonecta/public/assets/css/soft-design-system.css
@@ -3844,21 +3844,6 @@ fieldset:disabled .btn {
   --bs-gradient: none;
 }
 
-.btn-outline-success {
-  --bs-btn-color: #82d616;
-  --bs-btn-border-color: #82d616;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #82d616;
-  --bs-btn-hover-border-color: #82d616;
-  --bs-btn-focus-shadow-rgb: 130, 214, 22;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #82d616;
-  --bs-btn-active-border-color: #82d616;
-  --bs-btn-active-shadow: none;
-  --bs-btn-disabled-color: #82d616;
-  --bs-btn-disabled-bg: transparent;
-  --bs-gradient: none;
-}
 
 .btn-outline-info {
   --bs-btn-color: #17c1e8;
@@ -5704,15 +5689,7 @@ fieldset:disabled .btn {
   color: #3f4652;
 }
 
-.alert-success {
-  --bs-alert-color: #345609;
-  --bs-alert-bg: #e6f7d0;
-  --bs-alert-border-color: #daf3b9;
-}
 
-.alert-success .alert-link {
-  color: #2a4507;
-}
 
 .alert-info {
   --bs-alert-color: #0e748b;
@@ -20109,7 +20086,7 @@ fieldset:disabled .btn {
 * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 
 */
-.alert-primary {
+/* .alert-primary {
   background-image: linear-gradient(310deg, #7928CA 0%, #d6006c 100%);
 }
 
@@ -20147,7 +20124,7 @@ fieldset:disabled .btn {
 
 .alert-dismissible .btn-close {
   background-image: none;
-}
+} */
 
 .avatar {
   color: #fff;
@@ -20280,14 +20257,13 @@ fieldset:disabled .btn {
   background: #fff;
 }
 
-.badge {
+/* .badge {
   text-transform: uppercase;
-}
+} */
 
 .btn {
   margin-bottom: 1rem;
   letter-spacing: -0.025rem;
-  text-transform: uppercase;
   box-shadow: 0 4px 7px -1px rgba(0, 0, 0, 0.11), 0 2px 4px -1px rgba(0, 0, 0, 0.07);
   background-size: 150%;
   background-position-x: 25%;
@@ -20502,16 +20478,6 @@ fieldset:disabled .btn {
   color: #fff;
 }
 
-.btn-outline-success {
-  box-shadow: none;
-}
-
-.btn-outline-success:hover:not(.active) {
-  background-color: transparent;
-  opacity: .75;
-  box-shadow: none;
-  color: #82d616;
-}
 
 .btn-info:hover,
 .btn.bg-gradient-info:hover {
