Modificación: Diseño cargue documentos post

--- a/Educonecta/public/assets/scss/soft-design-system/bootstrap/_tables.scss
+++ b/Educonecta/public/assets/scss/soft-design-system/bootstrap/_tables.scss
@@ -75,16 +75,16 @@
 // Therefor we add top and border bottoms to the `tr`s and left and right borders
 // to the `td`s or `th`s
 
-.table-bordered {
-  > :not(caption) > * {
-    border-width: $table-border-width 0;
+// .table-bordered {
+//   > :not(caption) > * {
+//     border-width: $table-border-width 0;
 
-    // stylelint-disable-next-line selector-max-universal
-    > * {
-      border-width: 0 $table-border-width;
-    }
-  }
-}
+//     // stylelint-disable-next-line selector-max-universal
+//     > * {
+//       border-width: 0 $table-border-width;
+//     }
+//   }
+// }
 
 .table-borderless {
   // stylelint-disable-next-line selector-max-universal
